Changed akka cluster role

--- a/src/main/resources/reference-application.conf
+++ b/src/main/resources/reference-application.conf
@@ -60,6 +60,6 @@ akka {
     publish-stats-interval = 10s
     metrics.gossip-interval = 10s
     metrics.collect-interval = 10s
-    roles = [kafka-rest]
+    roles = [wasp-proxy]
   }
 }
